phase 0 complete, added command to setup: npm run setup->npm run dev:all to start ----- to close: close services then docker-compose down

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "frontend_admin"
   ],
   "scripts": {
+    "setup": "node scripts/setup.js",
     "dev:all": "concurrently \"npm run dev -w backend\" \"npm run dev -w frontend_user\" \"npm run dev -w frontend_admin\"",
     "dev:user": "concurrently \"npm run dev -w backend\" \"npm run dev -w frontend_user\"",
     "dev:admin": "concurrently \"npm run dev -w backend\" \"npm run dev -w frontend_admin\"",
