--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -14,10 +14,12 @@
     "@mantine/form": "^7.5.0",
     "@mantine/hooks": "^7.5.0",
     "@tanstack/react-query": "^5.17.19",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
