--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
+    "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
