--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,20 @@
-name: CI & CD
+name: CI & CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - 'feature/*'
+      - 'dev'
+      - 'main'
+  pull_request:
+    branches:
+      - 'dev'
+      - 'main'
 
 jobs:
-  test:
+  # 1. Unit Tests - Runs on feature branches, dev, and main
+  unit-tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,18 +23,51 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
       
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
-      - name: Run Tests
-        run: npm test
+      - name: Generate Prisma Client
+        run: npm run prisma:generate -w backend
 
-  deploy:
-    needs: test
+      - name: Run Unit Tests
+        run: npm run test:unit
+
+  # 2. Integration Tests - Runs on PRs to dev and main
+  integration-tests:
+    name: Integration Tests
+    needs: unit-tests
+    if: github.event_name == 'pull_request' && (github.base_ref == 'dev' || github.base_ref == 'main')
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
+
+      - name: Generate Prisma Client
+        run: npm run prisma:generate -w backend
+
+      - name: Run Integration Tests
+        run: npm run test:integration
+
+  # 3. Deployment - Runs on merge/push to main after tests pass
+  deploy:
+    name: Deploy to Production
+    needs: [unit-tests, integration-tests]
+    # Only run on push to main (which happens after a PR is merged)
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
       - name: Trigger Render Backend Deploy
         continue-on-error: true
         run: |
