--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dev:user": "concurrently \"npm run dev -w backend\" \"npm run dev -w frontend_user\"",
     "dev:admin": "concurrently \"npm run dev -w backend\" \"npm run dev -w frontend_admin\"",
     "build:all": "npm run build -w backend && npm run build -w frontend_user && npm run build -w frontend_admin",
-    "test": "echo 'Tests will be implemented later' && exit 0"
+    "test:unit": "npm run test -w backend -- --dir src && npm run test -w frontend_user -- --dir src && npm run test -w frontend_admin -- --dir src",
+    "test:integration": "npm run test -w backend -- --dir tests/integration && npm run test -w frontend_user -- --dir tests/integration && npm run test -w frontend_admin -- --dir tests/integration",
+    "test:all": "npm run test:unit && npm run test:integration"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
