--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^7.5.0",
     "@mantine/form": "^7.5.0",
     "@mantine/hooks": "^7.5.0",
+    "@mantine/notifications": "^7.17.8",
     "@tanstack/react-query": "^5.17.19",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
