--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.5",
+    "@vitest/coverage-v8": "^4.0.17",
     "prisma": "^5.8.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
