--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
