--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,10 +15,10 @@
     }
   },
   "include": [
-    "src/**/*",
-    "tests/**/*"
+    "src/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "tests/**/*"
   ]
 }
