--- a/frontend_user/tsconfig.json
+++ b/frontend_user/tsconfig.json
@@ -17,7 +17,8 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["../shared/src/*"]
+      "@shared/*": ["../shared/src/*"],
+      "@images/*": ["../shared/image_components/*"]
     }
   },
   "include": ["src"],
