--- a/backend/package.json
+++ b/backend/package.json
@@ -39,5 +39,8 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3",
     "vitest": "^4.0.17"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
