chore: enhance module resolution and update Prisma mocking in tests

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,16 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@utils/*": ["utils/*"],
+      "@services/*": ["services/*"],
+      "@controllers/*": ["controllers/*"],
+      "@middleware/*": ["middleware/*"],
+      "@routes/*": ["routes/*"],
+      "@validators/*": ["validators/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
