--- a/frontend_admin/package.json
+++ b/frontend_admin/package.json
@@ -23,6 +23,9 @@
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
@@ -32,6 +35,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^27.4.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.12",
     "vitest": "^4.0.17"
