--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,13 +35,14 @@ jobs:
       - name: Run Unit Tests
         run: npm run test:unit
 
-  # 2. Integration Tests - Runs on PRs to dev/main AND push to main
+  # 2. Integration Tests - Runs on PRs to dev/main, push to main, and all feature/fix branches
   integration-tests:
     name: Integration Tests
     needs: unit-tests
     if: |
       (github.event_name == 'pull_request' && (github.base_ref == 'dev' || github.base_ref == 'main')) ||
-      (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'push' && (contains(github.ref, '/feature/') || contains(github.ref, '/fix/')))
     runs-on: ubuntu-latest
     
     services:
