Fix CI/CD configuration and TypeScript errors

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "workspaces": [
     "backend",
     "frontend_user",
-    "frontend_admin"
+    "frontend_admin",
+    "shared"
   ],
   "scripts": {
     "setup": "node scripts/setup.js",
