Update GitHub Actions workflow to include 'bridge_to_dev' branch for deployment triggers

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,12 @@ on:
       - 'dev'
       - 'main'
       - 'fix/*'
+      - 'bridge_to_dev'
   pull_request:
     branches:
       - 'dev'
       - 'main'
+      - 'bridge_to_dev'
 
 jobs:
   # 1. Unit Tests - Runs on feature branches, dev, and main
