update style according the merge with dev

--- a/frontend_user/tsconfig.json
+++ b/frontend_user/tsconfig.json
@@ -47,6 +47,9 @@
       ],
       "@shared/*": [
         "../shared/src/*"
+      ],
+      "@images/*": [
+        "../shared/image_components/*"
       ]
     }
   },
