--- a/frontend_user/package.json
+++ b/frontend_user/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "dom-helpers": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.12.0"
