--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,7 +101,7 @@ jobs:
     needs: [unit-tests, integration-tests]
     # Run on push to main OR on fix branches (for testing deployment before merging)
     if: |
-      github.event_name == 'push' && (
+      github.ref != 'refs/heads/bridge_to_dev' && github.event_name == 'push' && (
         github.ref == 'refs/heads/main' ||
         contains(github.ref, '/fix/')
       )
