--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,16 +38,15 @@ jobs:
       - name: Run Unit Tests
         run: npm run test:unit
 
-  # 2. Integration Tests - Runs on PRs to dev/main, push to main, and all feature/fix branches
+  # 2. Integration Tests - Runs on PRs to dev/main, push to main, bridge_to_dev, and all feature/fix branches
   integration-tests:
     name: Integration Tests
     needs: unit-tests
     if: |
-      github.ref != 'refs/heads/bridge_to_dev' && (
-        (github.event_name == 'pull_request' && (github.base_ref == 'dev' || github.base_ref == 'main')) ||
-        (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-        (github.event_name == 'push' && (contains(github.ref, '/feature/') || contains(github.ref, '/fix/')))
-      )
+      (github.event_name == 'pull_request' && (github.base_ref == 'dev' || github.base_ref == 'main')) ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'push' && github.ref == 'refs/heads/bridge_to_dev') ||
+      (github.event_name == 'push' && (contains(github.ref, '/feature/') || contains(github.ref, '/fix/')))
     runs-on: ubuntu-latest
     
     services:
@@ -99,10 +98,11 @@ jobs:
   deploy:
     name: Deploy to Production
     needs: [unit-tests, integration-tests]
-    # Run on push to main OR on fix branches (for testing deployment before merging)
+    # Run on push to main, bridge_to_dev, OR on fix branches (for testing deployment before merging)
     if: |
-      github.ref != 'refs/heads/bridge_to_dev' && github.event_name == 'push' && (
+      github.event_name == 'push' && (
         github.ref == 'refs/heads/main' ||
+        github.ref == 'refs/heads/bridge_to_dev' ||
         contains(github.ref, '/fix/')
       )
     runs-on: ubuntu-latest
